# UniversalBlockConnector

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
cmake/: clang-toolchain.cmake
src/: main.cpp
src/blocks/common/: CMakeLists.txt  bytearraydata.cpp  bytearraydata.h  bytearraydatacontroller.cpp  bytearraydatacontroller.h  bytearraydatamodel.cpp  bytearraydatamodel.h  bytearraydatawidget.cpp  bytearraydatawidget.h  ledwidget.cpp  ledwidget.h
src/blocks/interfaces/: CMakeLists.txt
src/blocks/interfaces/serial/: serialcontroller.cpp  serialcontroller.h  serialdatamodel.cpp  serialdatamodel.h  serialwidget.cpp  serialwidget.h
src/blocks/interfaces/tcpclient/: tcpclientcontroller.cpp  tcpclientcontroller.h  tcpclientdatamodel.cpp  tcpclientdatamodel.h  tcpclientwidget.cpp  tcpclientwidget.h
src/blocks/interfaces/tcpserver/: tcpservercontroller.cpp  tcpservercontroller.h  tcpserverdatamodel.cpp  tcpserverdatamodel.h  tcpserverwidget.cpp  tcpserverwidget.h
src/blocks/interfaces/tcpservermulti/: sockettabledelegate.cpp  sockettabledelegate.h  sockettablemodel.cpp  sockettablemodel.h  tcpservermulticontroller.cpp  tcpservermulticontroller.h  tcpservermultidatamodel.cpp  tcpservermultidatamodel.h  tcpservermultiwidget.cpp  tcpservermultiwidget.h
src/blocks/interfaces/udp/: udpcontroller.cpp  udpcontroller.h  udpdatamodel.cpp  udpdatamodel.h  udpwidget.cpp  udpwidget.h
src/blocks/modyfiers/: CMakeLists.txt
src/blocks/modyfiers/delay/: delaycontroller.cpp  delaycontroller.h  delaydatamodel.h  delaywidget.cpp
src/blocks/modyfiers/lost/: lostcontroller.cpp  lostcontroller.h  lostdatamodel.cpp  lostdatamodel.h  lostwidget.cpp  lostwidget.h
src/blocks/modyfiers/noise/: delaycontroller.h  delaydatamodel.cpp  delaywidget.h
src/blocks/modyfiers/switcher/: delaycontroller.cpp
src/blocks/sources/: CMakeLists.txt
src/blocks/sources/datasender/: datasendercontroller.cpp  datasendercontroller.h  datasendermodel.cpp  datasendermodel.h  datasenderwidget.cpp  datasenderwidget.h
src/blocks/struct/: CMakeLists.txt
src/blocks/struct/structextractor/: structviewerlistmodel.h  structviewerwidget.h
src/blocks/struct/structfilter/: structviewermodel.cpp
src/blocks/struct/structgraphviewer/: highlighter.cpp  structchart.cpp  structchart.h  structgraphviewercontroller.cpp  structgraphviewercontroller.h  structgraphviewermodel.cpp  structgraphviewermodel.h  structgraphviewerwidget.cpp  structgraphviewerwidget.h
src/blocks/struct/structsender/: structsendercontroller.cpp  structsendercontroller.h  structsenderlistmodel.cpp  structsendermodel.cpp  structsendermodel.h  structsenderwidget.cpp  structsenderwidget.h
src/blocks/struct/structviewer/: structviewercontroller.cpp  structviewercontroller.h  structviewermodel.h  structviewerwidget.cpp
src/blocks/struct/utils/: highlighter.h
src/blocks/viewers/: CMakeLists.txt
src/blocks/viewers/dataviewer/: dataviewercontroller.cpp  dataviewercontroller.h  dataviewermodel.cpp  dataviewermodel.h  dataviewerwidget.cpp  dataviewerwidget.h
src/gui/: mainwindow.cpp  mainwindow.h
src/utils/: CMakeLists.txt  loggermanager.cpp  loggermanager.h
templates/: Delay.flow  TcpServerClient.flow  UdpTcpConverter.flow  UdpTransmission.flow
